--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,4 +98,12 @@ services:
       TRANSACTION4_URL: transaction4:1303
       TRANSACTION5_URL: transaction5:1304
 
+  reverse-proxy:
+    image: traefik # The official Traefik docker image
+    command: --api --docker # Enables the web UI and tells Traefik to listen to docker
+    ports:
+      - "80:80"     # The HTTP port
+      - "8080:8080" # The Web UI (enabled by --api)
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events
 
