--- a/audit_server/dockerfile
+++ b/audit_server/dockerfile
@@ -5,5 +5,6 @@ RUN apk update && apk add --no-cache bash git
 COPY . /go/src/audit_server/
 RUN go get /go/src/audit_server 
 RUN go install /go/src/audit_server
+WORKDIR /go/src/audit_server/
 
 ENTRYPOINT /go/bin/audit_server
