--- a/audit_server/dockerfile
+++ b/audit_server/dockerfile
@@ -1,10 +1,11 @@
-FROM golang:alpine 
+FROM golang:1.8
 
-RUN apk update && apk add --no-cache bash git
-
-COPY . /go/src/audit_server/
-RUN go get /go/src/audit_server 
-RUN go install /go/src/audit_server
+RUN mkdir -p /go/src/audit_server
 WORKDIR /go/src/audit_server/
 
-ENTRYPOINT /go/bin/audit_server
+COPY . /go/src/audit_server/
+
+RUN go-wrapper download
+RUN go-wrapper install
+
+CMD ["go-wrapper", "run"]
