Print transNums into transNums.txt in transaction_server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
 
   transaction:
     build: transaction_server/
+    volumes:
+      - .:/go/src/transaction_server
     ports:
       - 1300:1300
     links:
