--- a/transaction_server/dockerfile
+++ b/transaction_server/dockerfile
@@ -1,6 +1,7 @@
 FROM golang:alpine
 RUN apk add git
 
+WORKDIR /go/src/transaction_server/
 COPY . /go/src/transaction_server/
 RUN go get -u github.com/mediocregopher/radix.v2/redis
 RUN go get -u github.com/mediocregopher/radix.v2/pool
