--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,6 @@ services:
     volumes:
       - .:/go/src/audit_server
 
-  audit2:
-    build: audit_server2/
-    ports:
-      - 1401:1401
-    volumes:
-      - .:/go/src/audit_server2
-
   transaction:
     build: transaction_server/
     ports:
@@ -33,7 +26,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -49,7 +41,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -65,7 +56,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -81,7 +71,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -97,7 +86,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -113,7 +101,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -129,7 +116,6 @@ services:
       - redis
       - quote
       - audit
-      - audit2
     environment:
       REDIS_URL: redis:6379
       QUOTE_URL: quote:1200
@@ -147,18 +133,22 @@ services:
       - transaction3
       - transaction4
       - transaction5
+      - transaction6
+      - transaction7
       - redis
       - quote
       - audit
     working_dir: /go/src/daytrading
     command: go build -o daytrading
-    command: go run daytrading workload4
+    command: go run daytrading 2018
     environment:
       TRANSACTION_URL: transaction:1300
       TRANSACTION2_URL: transaction2:1301
       TRANSACTION3_URL: transaction3:1302
       TRANSACTION4_URL: transaction4:1303
       TRANSACTION5_URL: transaction5:1304
+      TRANSACTION6_URL: transaction6:1305
+      TRANSACTION7_URL: transaction7:1306
 
   reverse-proxy:
     image: traefik # The official Traefik docker image
