--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -4,10 +4,12 @@ services:
   redis:
     image: redis
     ports:
-      - "6379:6379"
+      - "6381:6379"
 
   redis2:
     image: redis
+    ports:
+      - "6382:6379"
 
   quote:
     build: quote_server/
@@ -38,11 +40,26 @@ services:
       QUOTE_URL: quote:1200
       AUDIT_URL: audit:1400
 
-  reverse-proxy:
-    image: traefik # The official Traefik docker image
-    command: --api --docker # Enables the web UI and tells Traefik to listen to docker
+  traefik:
+    image: traefik
+    command: --web --docker --docker.domain=docker.localhost --logLevel=DEBUG
     ports:
-      - "80:80"     # The HTTP port
-      - "8080:8080" # The Web UI (enabled by --api)
+      - "80:80"
+      - "8080:8080"
+      - "443:443"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  machine:
+    build: app/
+    ports:
+      - 2001:80
+    labels:
+      - "traefik.backend=machine-echo"
+      - "traefik.frontend.rule=Host:machine-echo.example.com"
+
+  echo:
+    image: katacoda/docker-http-server:v2
+    labels:
+      - "traefik.backend=echo"
+      - "traefik.frontend.rule=Host:echo-echo.example.com"
