--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -60,6 +60,11 @@ services:
     labels:
       - "traefik.backend=machine-echo"
       - "traefik.frontend.rule=Host:machine-echo.example.com"
+    environment:
+      REDIS_URL: redis:6379
+      REDIS2_URL: redis2:6379
+      QUOTE_URL: quote:1200
+      AUDIT_URL: audit:1400
 
   echo:
     image: katacoda/docker-http-server:v2
