--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -230,3 +230,35 @@ services:
       - "8080:8080" # The Web UI (enabled by --api)
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock # So that Traefik can listen to the Docker events
+
+  machine:
+    build: app/
+    ports:
+      - 2001:80
+    depends_on:
+      - quote
+      - transaction
+    labels:
+      - "traefik.backend=machine-echo"
+      - "traefik.frontend.rule=Host:machine-echo.example.com"
+    environment:
+      REDIS_URL: redis:6379
+      REDIS2_URL: redis2:6379
+      QUOTE_URL: quote:1200
+      AUDIT_URL: audit:1400
+      TRANSACTION_URL: transaction:1300
+      
+  web:
+    build: web_server/
+    ports:
+      - 1600:1600
+    depends_on:
+      - quote
+    labels:
+      - "traefik.backend=web-echo"
+      - "traefik.frontend.rule=Host:web-echo.example.com"
+    environment:
+      REDIS_URL: redis:6379
+      REDIS2_URL: redis2:6379
+      QUOTE_URL: quote:1200
+      AUDIT_URL: audit:1400
