--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -32,26 +32,26 @@ services:
     volumes:
       - .:/go/src/audit_server
 
-  # workload:
-  #   image: golang:alpine
-  #   volumes: 
-  #     - .:/go/src/daytrading
-  #   links:
-  #     - redis
-  #     - redis2
-  #   depends_on:
-  #     - transaction
-  #     - redis
-  #     - redis2
-  #     - quote
-  #     - audit
-  #   working_dir: /go/src/daytrading
-  #   command: go build -o daytrading
-  #   command: go run daytrading workload3
-  #   environment:
-  #     WEB_URL: web:80
-  #     TRANSACTION_URL: transaction:1300
-  #
+  workload:
+    image: golang:alpine
+    volumes: 
+      - .:/go/src/daytrading
+    links:
+      - redis
+      - redis2
+    depends_on:
+      - transaction
+      - redis
+      - redis2
+      - quote
+      - audit
+    working_dir: /go/src/daytrading
+    command: go build -o daytrading
+    command: go run daytrading workload3
+    environment:
+      WEB_URL: web:1600
+      TRANSACTION_URL: transaction:1300
+  
   transaction:
     build: transaction_server/
     ports:
