--- a/Servers/docker-compose.yml
+++ b/Servers/docker-compose.yml
@@ -32,25 +32,25 @@ services:
     volumes:
       - .:/go/src/audit_server
 
-  workload:
-    image: golang:alpine
-    volumes: 
-      - .:/go/src/daytrading
-    links:
-      - redis
-      - redis2
-    depends_on:
-      - transaction
-      - redis
-      - redis2
-      - quote
-      - audit
-    working_dir: /go/src/daytrading
-    command: go build -o daytrading
-    command: go run daytrading workload3
-    environment:
-      WEB_URL: web:1600
-      TRANSACTION_URL: transaction:1300
+  # workload:
+  #   image: golang:alpine
+  #   volumes: 
+  #     - .:/go/src/daytrading
+  #   links:
+  #     - redis
+  #     - redis2
+  #   depends_on:
+  #     - transaction
+  #     - redis
+  #     - redis2
+  #     - quote
+  #     - audit
+  #   working_dir: /go/src/daytrading
+  #   command: go build -o daytrading
+  #   command: go run daytrading workload3
+  #   environment:
+  #     WEB_URL: web:1600
+  #     TRANSACTION_URL: transaction:1300
   
   transaction:
     build: transaction_server/
@@ -77,6 +77,19 @@ services:
     build: web_server/
     ports:
       - 1600:1600
+    depends_on:
+      - transaction
+      - quote
+    environment:
+      REDIS_URL: redis:6379
+      REDIS2_URL: redis2:6379
+      QUOTE_URL: quote:1200
+      AUDIT_URL: audit:1400
+
+  web2:
+    build: web_server2/
+    ports:
+      - 1601:1601
     depends_on:
       - transaction
       - quote
