--- a/Servers/web_server2/dockerfile
+++ b/Servers/web_server2/dockerfile
@@ -1,10 +1,10 @@
 FROM golang:alpine
 RUN apk add git
 
-COPY . /go/src/web_server2/
+COPY . /go/src/web_server/
 RUN go get -u github.com/gorilla/mux
-RUN go get /go/src/web_server2
-RUN echo "installed web2"
-WORKDIR /go/src/web_server2
+RUN go get /go/src/web_server
+RUN echo "installed web"
+WORKDIR /go/src/web_server
 
-ENTRYPOINT /go/bin/web_server2
+ENTRYPOINT /go/bin/web_server
